2006-12-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/games.c (igraph_preference_game)
	(igraph_asymmetric_preference_game) : the types of the generated
	vertices can now be returned.
	* interfaces/python/src/graphobject.c (igraphmodule_Graph_Preference)
	(igraphmodule_Graph_Asymmetric_Preference) : added attribute argument
	to store vertex types in the given attribute
	* interfaces/python/src/edgeseqobject.c,
	interfaces/python/src/vertexseqobject.c : mass assignment of attributes
	are now supported
	* interfaces/R/src/rinterface.c (R_igraph_preference_game)
	(R_igraph_asymmetric_preference_game) : adopted to the new interface,
	vertex types are silently dropped now

2006-12-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/spectral_properties.c (igraph_laplacian) : isolated vertex bug
	plus multiple edges bug corrected

2006-12-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/spectral_properties.c (igraph_laplacian) : isolated vertex
	handling bug corrected
	* interfaces/python/src/graphobject.c (igraphmodule_Graph_laplacian) :
	added

2006-12-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/pottsmodel_2.cpp
	* src/NetDataTypes.cpp
	* src/NetRoutines.cpp : some not needed functions removed

2006-12-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c (igraphmodule_Graph_delete_edges) :
	added by_index keyword argument
	* interfaces/python/package/__init__.py
	(Graph.edge_betweenness_clustering) : added

2006-12-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/spectral_properties.c (igraph_laplacian) : added

2006-11-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_callaway_traits_game) : bug corrected

2006-11-29  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/games.c (igraph_preference_game)
	(igraph_asymmetric_preference_game) : added
	* src/igraph.h : added new function declarations
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_Preference)
	(igraphmodule_Graph_Asymmetric_Preference) : added