@@ -1,3 +1,8 @@
+2006-12-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/structure_generators.c (igraph_connect_neighborhood) : added
+	(igraph_lattice) : 'nei' argument implemented
+
 2006-12-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/games.c (igraph_preference_game)
